# sov-hlth-prot

./: .gitignore  README.md  pyproject.toml
config/: synthea.properties
config/payers/: sv_insurance_companies.csv  sv_insurance_eligibilities.csv  sv_insurance_plans.csv
docs/: ARCHITECTURE.md
modules/: ckdu_mesoamerican_nephropathy.json  dengue.json
notebooks/: sv_fhir_patient.ipynb  sv_omop_explorer.ipynb
reference/burden/: sv_disease_burden.csv
reference/census/: sv_age_pyramid_2024.csv  sv_department_centroids.csv  sv_departments_2024.csv
reference/vocab/: starter_crosswalk.csv
scripts/shp/: __init__.py  cli.py  config.py  samples.py
scripts/shp/estimators/: __init__.py  ate.py  diagnostics.py
scripts/shp/omop/: __init__.py  etl_synthea.py  schema.py  vocabulary.py
scripts/shp/omop/ddl/: omop_cdm_5_4_subset.sql
scripts/shp/quality/: __init__.py  checks.py
scripts/shp/study/: __init__.py
scripts/shp/study/diabetes/: __init__.py  cohort.py  dgp.py  run.py  to_omop.py
scripts/shp/synthea/: __init__.py  bootstrap.py  calibration.py  cli.py  config.py  generate.py  geography.py  modules.py  narratives.py  personas.py
tests/: conftest.py  test_calibration.py  test_diabetes_end_to_end.py  test_estimators.py  test_etl_synthea.py  test_geography.py  test_modules.py
tests/fixtures/synthea_csv/: conditions.csv  encounters.csv  medications.csv  observations.csv  patients.csv
