[project]
name = "sov-hlth-prot"
version = "0.1.0"
description = "Zero-PHI synthetic El Salvador health-data sandbox: Nemotron personas → SV-calibrated Synthea (FHIR R4 + CSV) → OMOP CDM v5.4 (DuckDB) → OHDSI-style causal estimators, with R notebooks that open in Colab."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
# JupyterLab for running the R notebooks locally (R packages install via Rscript;
# see the README). Kept optional so the core pipeline stays lightweight.
notebooks = ["jupyterlab>=4.0", "nbconvert>=7.0"]
dev = ["pytest>=8.0"]

[project.scripts]
shp = "shp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/shp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
